# cross_device_shared_space

./: .gitignore  Cargo.toml  README.md  ai-agent-handoff-brief.md
core/: Cargo.toml
core/src/: lib.rs  network.rs  protocol.rs  storage.rs
linux-app/: Cargo.toml
linux-app/src/: main.rs
