[package]
name = "shared_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "shared_core"

[dependencies]
# P2P and networking
iroh = { version = "1.0" }
tokio = { version = "1.38", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

# Serialization & protocols
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Local storage
rusqlite = { version = "0.31", features = ["bundled"] }

# FFI bindings
uniffi = { version = "0.28", features = ["cli"] }

# Cryptography
rand = "0.8"
hex = "0.4"
uuid = { version = "1.8", features = ["v4"] }

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
